-- along with this package; see the file COPYING.  If not, write to
-- the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
-- Boston, MA 02110-1301, USA.  
--

This file lists user visible changes that were made between releases.  For
more verbose descriptions of these and internal changes see the ChangeLog
files.

Version 0.0.7
-------------


Version 0.0.6
-------------

 * new interpolate() function in equation solver
 * converter tool also able to export device models as schematic entries
 * coplanar short, open, gap and step components
 * transient models of bias-t, dc-block and dc-feed added
 * gain circle formulas in equation solver available
 * improvements in the equation system solvers
 * implementation of noise and stability circle formulas
 * fixed noise calculations of microstrip and coplanar components

Version 0.0.5
-------------

 * stability factors available in equation solver
 * implementation of microstrip t-junction
 * additional AC noise analysis
 * speed and memory optimizations in S-parameter analysis
 * implementation of coplanar lines
 * breakdown current/voltage in diode model available
 * list and constant sweeps available
 * added convergence helpers for non-linear DC and transient analysis
 * allowing vector indices with multiply dependencies
 * new matrix operations, e.g. det(), conj(), transpose() and inverse()
 * reduced memory consumption during netlist checking and instantiating
 * new Qucs-Converter command line tool
 * two new components: amplifier and operational amplifier
 * added microstrip via hole implementation
 * node-set functionality for DC and transient analysis

Version 0.0.4
-------------

 * ideal AC, DC and S-parameter models for microstrip t-junctions and
   cross-junctions
 * implementation of transient analysis for non-linear devices
 * support for current and voltage pulse sources (single and rectangular)
 * linear transient analysis for RCL networks available